package com.txstate.taskbuddy.database

data class CategorySummary(
    val category: String,
    val count: Int
)
